# be

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.app.yml  docker-compose.infra.yml  docker-compose.worker.yml  pyproject.toml
.cursor/rules/: command-and-how-to-test.mdc
aws/: lifecycle.json
docker/dev/: .env.example  docker-compose.infra.yml
docker/prod/: .env.example
docs/: AGENT_SQL_RLS_SETUP.md  BILLING_SYSTEM.md  EL_RIPLEY_WHITE_PAPER copy.md  ESCALATION_SYSTEM_REDESIGN.md  NOTIFICATION_SYSTEM.md  README.md  SUBAGENT_DESIGN.md  SUGGEST_RESPONSE_AGENT.md  SYNC_ARCHITECTURE.md  playbooks-design-and-qdrant-setup.md
docs/multi-llm-provider/: multi-llm-provider-design.md  multi-llm-provider-implementation-plan.md  multi-llm-provider-research.md
scripts/: generate_sepay_api_key.py  init_postgres.sh  install-dependencies.sh  test_qdrant_named_vectors.py
scripts/cursor-export/: export_cursor_config.sh
src/: main.py  settings.py
src/agent/: utils.py
src/billing/: __init__.py  credit_service.py
src/common/: s3_client.py  types.py  user_settings_constants.py
src/database/: __init__.py
src/middleware/: auth_middleware.py  exception_handler.py
src/redis_client/: __init__.py  redis_agent_lock.py  redis_agent_manager.py  redis_agent_temp_context.py  redis_client.py  redis_facebook_sync_locks.py  redis_job_queue.py  redis_suggest_response_cache.py  redis_user_sessions.py  redis_utils.py
src/services/: __init__.py  auth_service.py
src/socket_service/: __init__.py  emitters.py  schemas.py  socket_service.py  utils.py
src/utils/: __init__.py  encryption.py  estimate_context_tokens_o200k_base.py  logger.py  make_id.py  serialization.py  validate_llm_provider_api_key.py
src/workers/: sync_worker.py
tests/: conftest.py  test_anthropic_proxy.py  test_sql_tool_rls.py
tests/llm_providers/: REPORT.md  __init__.py  test_01_basic_completion.py  test_02_streaming.py  test_03_single_tool_call.py  test_04_parallel_tool_calls.py  test_05_tool_call_loop.py  (+9 more)
(+433 files in other folders)
