[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = "Facebook Fanpage Management System"
authors = ["dungdq3 <dungdq3@icloud.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
pydantic-settings = "^2.8.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
numpy = "<2"
redis = "^5.2.1"
pyjwt = "^2.10.1"
python-socketio = "^5.13.0"
httpx = "^0.28.0"
requests = "^2.31.0"
openai = "^1.12.0"
asyncpg = "^0.30.0"
motor = "^3.7.1"
boto3 = "^1.34.0"
python-multipart = "^0.0.20"
tiktoken = "^0.12.0"
cryptography = "^46.0.3"
stripe = "^14.1.0"
polar-sdk = "^0.28.0"
anthropic = ">=0.49.0,<2.0.0"
google-genai = "^1.0.0"
qdrant-client = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"
pytest-asyncio = ">=0.21.0,<0.22.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--ignore=tests/llm_providers",
    "--ignore=tests/test_sql_tool_rls.py",
    "--ignore=tests/test_anthropic_proxy.py",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "src/settings.py", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]